# PySME

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
cmake/: platform.h.in
docs/: conf.py  index.rst  requirements.txt
docs/advance/: faq.md  fordev.md  how-to.md  line_filtering.md
docs/concepts/: data_files.md  nlte.md
docs/dev/: changelog.md  index.rst  release_process.md
docs/fundamentals/: flux_inten.md  linelist.md
docs/getting_started/: first_spectrum.md  index.rst  installation.md  nlte.md
docs/reference/: cli_or_scripts.rst
examples/: download_large_datafiles.py  download_release_assets.py
src/pysme/: __init__.py  config_default.json  datafiles_atmospheres.json  datafiles_nlte.json  init_config.py  large_file_storage.py  nlte.py  sme.py  sme_synth.py  solve.py  synthesize.py  util.py
src/pysme/linelist/: linelist.py
src/pysme/smelib/: _smelib.cpp  libtools.py  sme_synth_faster.h
test/: conftest.py  test_largefilestorage_paths.py  test_sme_structure.py  test_solver.py  test_solver_line_select.py  test_synthesis.py
