[build-system]
requires = [
  "scikit-build-core>=0.10",
  "numpy>=1.23",             # 构建期需要 NumPy 头文件时必须
]
build-backend = "scikit_build_core.build"

[project]
name = "pysme-astro"
requires-python = ">=3.9"
version = "0.6.27"
description = "Spectroscopy Made Easy"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Mingjie Jian" },
  { name = "Ansgar Wehrhahn" },
  { name = "Jeff A. Valenti" },
]


dependencies = [
  "numpy>=1.23",
  "scipy>=1.9,<2.0",
  "pandas>=1.5,<3.0",
  "astropy>=6,<8",
  "tqdm>=4.64",
  "colorlog>=6.7",
  "emcee>=3.1",
  "pybtex>=0.24",
  "flex-format>=0.2.18",
  "plotly>=5.11,<6.0",
  "matplotlib>=3.6,<4.0",
  "requests>=2.28,<3.0",
  "wget>=3.2",
  "pqdm>=0.1"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Bug Tracker" = "https://github.com/MingjieJian/SME/issues"
"Documentation" = "https://pysme-astro.readthedocs.io/en/latest/"
"Source Code"  = "https://github.com/MingjieJian/SME/"

[project.optional-dependencies]
dev = [
  "pytest>=7.2,<9",
  "sphinx>=5.3,<9",
  "pre-commit>=2.20,<4",
  "flake8>=7,<8"
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/pysme"]
sdist.include = [
  "smelib/src/*",
  "smelib/pymodule/*",
  "cmake/*",
  "src/pysme/*.json",
  "src/pysme/*.gz",
]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win*"
test-requires = "pytest"
test-command = "python -c \"from pysme.smelib import _smelib; print(_smelib.LibraryVersion())\""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "dnf install -y gcc-gfortran || yum install -y gcc-gfortran"
archs = ["x86_64"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = "brew install gcc"
archs = ["arm64"]
environment = { FC = "gfortran-14", CC = "gcc-14", CXX = "g++-14", MACOSX_DEPLOYMENT_TARGET = "14.0" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

# Black：代码格式化配置
[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
